Apply additional lint changes

--- a/styles/main.less
+++ b/styles/main.less
@@ -20,17 +20,16 @@ html,
 
 
 .popup-app {
-  min-width: 400px;
-
   max-width: 800px;
+  min-width: 400px;
 
   body,
   html,
   input.searchBox {
-    width: 100%;
     line-height: 20px;
-    margin-top: 8px;
     margin-bottom: 8px;
+    margin-top: 8px;
+    width: 100%;
   }
 
   .app-container {
@@ -221,6 +220,6 @@ label {
 }
 
 .ace_editor {
-  border: 1px solid #ccc;
-  height: calc(100%-50px)
+  border: 1px solid #cccccc;
+  height: calc(100%-50px);
 }
