--- a/styles/navigation.less
+++ b/styles/navigation.less
@@ -68,7 +68,7 @@
       list-style-type: none;
 
       &:last-of-type {
-        border-right: none;
+        border-right: 0px;
       }
     }
 
@@ -82,12 +82,12 @@
   }
 
   .searchBox {
-    width: 250px;
-    padding-left: 4px;
     border-bottom: 1px solid @base;
-    border-top: 1px solid @base;
-    border-left: none;
+    border-left: 0px;
     border-right: 1px solid @base;
+    border-top: 1px solid @base;
     height: 24px;
+    padding-left: 4px;
+    width: 250px;
   }
 }
