Add github integration

--- a/styles/ace.less
+++ b/styles/ace.less
@@ -34,3 +34,11 @@
 .ace_variable.ace_mnky {
   color: #bf00ff;
 }
+
+.disabled .ace_content {
+  background-color: #f3f3f3;
+}
+
+#contentarea.disabled {
+  opacity: 0.65
+}
