--- a/styles/navigation.less
+++ b/styles/navigation.less
@@ -21,10 +21,15 @@
 
     a {
       text-decoration: none;
+
     }
 
     &:hover {
       text-decoration: underline;
+    }
+
+    .read-only-item {
+      font-style: italic
     }
 
     .configuration-name {
