--- a/styles/main.less
+++ b/styles/main.less
@@ -7,7 +7,7 @@
 @import 'editor';
 @import 'ace';
 @import 'table';
-@import '../node_modules/react-select/less/default';
+@import '../node_modules/react-select/less/default'; // TODO: Find out how to style
 
 body,
 html,
