Add dark mode support

--- a/styles/ace.less
+++ b/styles/ace.less
@@ -1,42 +1,42 @@
 /* Comment */
 .ace_punctuation.ace_definition.ace_comment.ace_mnky {
-  color: #aa5500;
+  color: var(--editor-comment-color);
 }
 
 /* Group */
 .ace_punctuation.ace_definition.ace_entity.ace_mnky,
 .ace_constant.ace_section.ace_group-title.ace_mnky {
-  color: #aa0000;
+  color: var(--editor-group-color);
   font-weight: bold;
 }
 
 /* Option */
 .ace_constant.ace_library.ace_mnky {
-  color: #ff5500;
+  color: var(--editor-option-color);
 }
 
 /* Search */
 .ace_keyword.ace_other.ace_definition.ace_mnky {
-  color: #0000ff;
+  color: var(--editor-search-color)
 }
 
 /* Function */
 .ace_entity.ace_name.ace_function.ace_mnky {
-  color: #770088;
+  color: var(--editor-function-color)
 }
 
 /* Import */
 .ace_storage.ace_type.ace_mnky {
-  color: #31b404;
+  color: var(--editor-import-color)
 }
 
 /* Variable */
 .ace_variable.ace_mnky {
-  color: #bf00ff;
+  color: var(--editor-variable-color)
 }
 
 .disabled .ace_content {
-  background-color: #f3f3f3;
+  background-color: var(--editor-disabled-color)
 }
 
 #contentarea.disabled {
