--- a/styles/welcome.less
+++ b/styles/welcome.less
@@ -13,12 +13,12 @@
 
   h1,
   h2 {
-      border-bottom: 1px solid #eeeeee;
+      border-bottom: 1px solid var(--highlight-background-color);
       padding-bottom: 8px;
   }
 
   code {
-    background: #eeeeee;
+    background: var(--highlight-background-color);
   }
 
   /* code.language-ini {
