--- a/styles/editor.less
+++ b/styles/editor.less
@@ -12,18 +12,19 @@
   }
 
   .title {
-    background-color: @base;
-    color: #f0f0f0;
+    background-color: var(--editor-title-background);
+    border-bottom: 1px solid var(--darker-base-color);
+    color: var(--mode-text-color);
     display: flex;
-    padding: 4px 8px;
+    padding: 3px 8px;
 
     b {
-      background-color: desaturate(lighten(@base, 79%), 40%);
-      border: 1px solid darken(@base, 20%);
+      background-color: var(--navigation-background);
+      border: 1px solid var(--darker-base-color);
       border-bottom-left-radius: 4px;
       border-right: 0px;
       border-top-left-radius: 4px;
-      color: @base;
+      color: var(--base-text-color);
       display: block;
       font-size: 120%;
       height: 100%;
@@ -41,26 +42,32 @@
       z-index: 15;
     }
 
+    .Select-control,
+    .Select.is-focused > .Select-control {
+      background: var(--input-background-color);
+    }
+
     .Select-input > input {
-      border: 5px green;
       font-size: inherit;
       padding: 8px 0px 12px;
       width: 100%;
 
       &:focus {
-        border: 0px solid blue;
+        border: 0px solid var(--lighter-base-color);
         box-shadow: none;
       }
     }
 
     input.text-input {
-      border: 1px solid darken(@base, 20%);
+      background: var(--input-background-color);
+      color: var(--mode-text-color);
+      border: 1px solid var(--darker-base-color);
       border-bottom-right-radius: 4px;
       border-top-right-radius: 4px;
       flex-grow: 3;
       font-size: 110%;
-      margin: 8px 8px 8px 0px;
-      padding: 8px;
+      margin: 8px 8px 9px 0px;
+      padding: 8x;
     }
   }
 
