--- a/styles/navigation.less
+++ b/styles/navigation.less
@@ -3,6 +3,7 @@
 .navigation {
   background: var(--navigation-background);
   border-right: 1px solid var(--base-color);
+  display: flex;
   flex-basis: 250px;
   height: 100%;
   margin: 0px;
@@ -95,6 +96,7 @@
     }
 
     display: flex;
+    flex-direction: column;
 
     li {
       border-right: 1px solid #f0f0f0;
