--- a/styles/navigation.less
+++ b/styles/navigation.less
@@ -3,19 +3,23 @@
 .navigation {
   background: var(--navigation-background);
   border-right: 1px solid var(--base-color);
-  display: flex;
   flex-basis: 250px;
   height: 100%;
   margin: 0px;
   min-height: 100%;
   min-width: 250px;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   padding: 0px;
 
   ul {
     margin: 0px;
     padding: 0px;
+  }
+
+  & > div {
+    height: 100%;
+    min-height: 100%;
   }
 
   .read-only-item {
@@ -78,14 +82,20 @@
     }
   }
 
+  .navigation-header {
+    max-height: 90px;
+  }
+
   .actions {
 
     background-color: var(--base-color);
 
+
     a {
       color: #f0f0f0;
       display: block;
-      padding: 8px;
+      padding: 8px 8px;
+      text-align: center;
       text-decoration: none;
 
       &:hover {
@@ -96,11 +106,12 @@
     }
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
 
     li {
-      border-right: 1px solid #f0f0f0;
       list-style-type: none;
+      width: 33.333%;
 
       &:last-of-type {
         border-right: 0px;
@@ -110,6 +121,13 @@
     a {
       font-weight: bold;
     }
+  }
+
+  .items {
+    height: calc(100% - 90px);
+    min-height: calc(100% - 90px);
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   .upload-form {
