--- a/styles/main.less
+++ b/styles/main.less
@@ -104,6 +104,8 @@ html,
 .app-container {
   background-color: var(--mode-color);
   color: var(--mode-text-color);
+  font-family: sans-serif;
+  font-size: 12px;
   /* height: 100vh !important; */
   margin: 0px;
   /* min-height: 100vh !important; */
@@ -115,6 +117,11 @@ html,
 .popup-app {
   max-width: 800px;
   min-width: 400px;
+  width: 100%;
+
+  body {
+    min-width: 400px;
+  }
 
   body,
   html,
@@ -176,6 +183,10 @@ input {
   display: flex;
   height: 100vh;
   min-height: 100vh;
+
+  &.with-warning {
+    margin-top: 20px;
+  }
 }
 
 .current-view {
@@ -311,6 +322,19 @@ label {
   margin: 8px;
   margin-bottom: 0px;
   padding: 4px;
+
+
+  &.fixed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0px;
+    border: 0px;
+    border-bottom: 2px solid var(--warning-color);
+    width: 100%;
+    height: 18px;
+  }
+
 }
 
 .error-box {
