Changes to default colors.

--- a/styles/main.less
+++ b/styles/main.less
@@ -76,12 +76,12 @@
   --editor-title-background: #030303;
 
 
-  --editor-comment-color: spin(#aa5500, 180);
-  --editor-group-color: spin(#aa0000, 180);
+  --editor-comment-color: #09ffe7;
+  --editor-group-color: #00bb00;
   --editor-option-color: spin(#ff5500, 180);
   --editor-search-color: spin(#0000ff, 180);
-  --editor-function-color: spin(#770088, 180);
-  --editor-import-color: spin(#31b404, 180);
+  --editor-function-color: #f79580;
+  --editor-import-color: #d060f8;
   --editor-variable-color: spin(#bf00ff, 180);
   --editor-disabled-color: spin(#f3f3f3, 180);
 
