--- a/styles/editor.less
+++ b/styles/editor.less
@@ -33,29 +33,13 @@
       padding: 8px;
     }
 
-    .Select {
+    .select-hotkeys {
       flex-grow: 1;
       margin: 8px 8px 8px 0px;
     }
 
-    .Select-menu-outer {
-      z-index: 15;
-    }
-
-    .Select-control,
-    .Select.is-focused > .Select-control {
-      background: var(--input-background-color);
-    }
-
-    .Select-input > input {
-      font-size: inherit;
-      padding: 8px 0px 12px;
-      width: 100%;
-
-      &:focus {
-        border: 0px solid var(--lighter-base-color);
-        box-shadow: none;
-      }
+    .toggle-configuration {
+      margin: auto 8px;
     }
 
     input.text-input {
