Color changes for regexes and url's.

--- a/styles/ace.less
+++ b/styles/ace.less
@@ -1,3 +1,8 @@
+/* URL */
+.ace_punctuation.ace_definition.ace_string.ace_url.ace_mnky {
+  color: var(--editor-string-url-color);
+}
+
 /* Comment */
 .ace_punctuation.ace_definition.ace_comment.ace_mnky {
   color: var(--editor-comment-color);
