--- a/styles/main.less
+++ b/styles/main.less
@@ -43,6 +43,7 @@
   --editor-import-color: #31b404;
   --editor-variable-color: #bf00ff;
   --editor-disabled-color: #f3f3f3;
+  --editor-string-url-color: #0cc8ed;
 
   --table-header-color: #cccccc;
   --table-2n-color: #f0f0f0;
@@ -84,6 +85,7 @@
   --editor-import-color: #d060f8;
   --editor-variable-color: spin(#bf00ff, 180);
   --editor-disabled-color: spin(#f3f3f3, 180);
+  --editor-url-color: #0cc8ed;
 
   --table-header-color: #666666;
   --table-2n-color: #333333;
