Improvements for docs and settings

--- a/styles/ace.less
+++ b/styles/ace.less
@@ -4,11 +4,13 @@
 }
 
 /* Comment */
+.hljs-comment,
 .ace_punctuation.ace_definition.ace_comment.ace_mnky {
   color: var(--editor-comment-color);
 }
 
 /* Group */
+.hljs-section,
 .ace_punctuation.ace_definition.ace_entity.ace_mnky,
 .ace_constant.ace_section.ace_group-title.ace_mnky {
   color: var(--editor-group-color);
@@ -21,6 +23,7 @@
 }
 
 /* Search */
+.hljs-attr,
 .ace_keyword.ace_other.ace_definition.ace_mnky {
   color: var(--editor-search-color)
 }
